bk_ida/gobmkida/c2/find_persistent_reading_cache_entry
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_persistent_reading_cache_entry/src/engine/persistent.c:827:25: error: use of undeclared identifier 'byte_9B389C'
v19 = ( unsigned __int8)byte_9B389C[i]; 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_persistent_reading_cache_entry/src/obj/1/persistent.o] Error 1
